# symphony

./: .gitattributes  README.md  context-pruner  context-pruner.cmd  context-pruner.ps1  run-symphony.cmd  run-symphony.ps1  run-symphony.sh
.codex/: config.toml
.codex/skills/context-pruner/: SKILL.md
elixir/: README.md  WORKFLOW.md  mix.exs
elixir/docs/: context_pruner.md  context_pruner_token_savings_report.md
elixir/docs/measurements/: idl-1144-context-pruner-token-savings-2026-03-18.json  idl-1147-remote-pruner-token-savings-2026-03-18.json  idl-1147-remote-pruner-token-savings-2026-03-18.md  idl-1149-constrained-blank-state-context-pruner-2026-03-18.json  idl-1149-constrained-blank-state-context-pruner-2026-03-18.md
elixir/lib/symphony_elixir/: agent_runner.ex  cli.ex  codex_conversation.ex  config.ex  host_shell.ex  http_server.ex  orchestrator.ex  process_runner.ex  prompt_builder.ex  ssh.ex  status_dashboard.ex  workflow.ex  workflow_store.ex  workspace.ex
elixir/lib/symphony_elixir_web/: presenter.ex  router.ex
elixir/priv/static/: dashboard.css
elixir/scripts/: measure_context_pruner_token_savings.exs
elixir/test/support/: test_support.exs
elixir/test/symphony_elixir/: app_server_test.exs  cli_test.exs  context_pruner_cli_test.exs  context_pruner_wrapper_test.exs  (+5 more)
rust/: Cargo.toml  README.md
rust/src/: codex.rs  config.rs  domain.rs  error.rs  http.rs  lib.rs  linear.rs  main.rs  orchestrator.rs  prompt.rs  workflow.rs  workspace.rs
stitch-downloads/10091711589866193800/: c35f87b299e344cea59bb607e41ee39d-Codex-Telemetry-Dashboard.html
(+14 files in other folders)
